@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 18-07-2005 added: Separator bar to settings screens.
  - 18-07-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 18-07-2005 updated: German language file
  - 17-07-2005 fixed: dvdplayer crashed if a dvd had 20 streams at the same time
